--- a/test/all/index.haml
+++ b/test/all/index.haml
@@ -5,10 +5,11 @@
     %script(src='http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js')
     %script(src='http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js')
     %script(src='../../angle.js')
+    %link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic' rel='stylesheet' type='text/css')
     %link(rel='stylesheet' type='text/css' href='../style.css')
 
   %body
-    %h1 AngleCharts Test: Visual inspection of all charts
+    %h1 AngleCharts BIG Test
 
     %h3 Palette
     #palette
