--- a/test/style.sass
+++ b/test/style.sass
@@ -2,13 +2,17 @@ $dataColor: #80BEC7
 $black:     #333
 $grid:      #BBB
 
+body
+  font-family: 'Source Sans Pro', sans-serif
+
 path, line
   fill: none
   stroke-width: 2.5px
   stroke: $dataColor
-
 rect
   fill: $dataColor
+text
+  font-family: 'Source Sans Pro', sans-serif
 
 .axis
   .tick
