--- a/test/style.sass
+++ b/test/style.sass
@@ -9,7 +9,7 @@ path, line
   fill: none
   stroke-width: 2.5px
   stroke: $dataColor
-rect
+rect, circle
   fill: $dataColor
 text
   font-family: 'Source Sans Pro', sans-serif
